About page not linked

--- a/about.html
+++ b/about.html
@@ -143,7 +143,7 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>Casey Monahan</h1>
+        <h1>BOOOOP</h1>
         <p>Casey is an engineer, designer, and environmentalist living in New York. She graduated from Olin College in December 2014 where she majored in Sustainable Design Engineering, played rugby, and made art.</p>
       </div>
     </div>
