--- a/project.html
+++ b/project.html
@@ -10,7 +10,7 @@
     <title>Casey Monahan | Home</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="jumbotron.css" rel="stylesheet">
@@ -47,7 +47,6 @@
     <div class="jumbotron">
       <div class="container">
         <h1>Casey Monahan</h1>
-        <p>Casey is an engineer, designer, and environmentalist living in New York. She graduated from Olin College in December 2014 where she majored in Sustainable Design Engineering, played rugby, and made art.</p>
       </div>
     </div>
 
@@ -55,7 +54,8 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-md-6">
-          <h2><a href="project.html">Project 1</a></h2>
+          <h2>Project 1</h2>
+          <img src="BirthdayPug.jpg">
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div>
