--- a/project.html
+++ b/project.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Casey Monahan | Home</title>
+    <title>Casey Monahan | Project 1</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -55,12 +55,13 @@
       <div class="row">
         <div class="col-md-6">
           <h2>Project 1</h2>
-          <img src="BirthdayPug.jpg">
+          <img style="width:50px;height:50px"  src="BirthdayPug.jpg">
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div>
         <div class="col-md-6">
           <h2>Project 2</h2>
+          <img style="width:500px;height:500px"  src="BirthdayPug.jpg">
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div>
