--- a/project.html
+++ b/project.html
@@ -55,13 +55,13 @@
       <div class="row">
         <div class="col-md-6">
           <h2>Project 1</h2>
-          <p> <img style="width:50px;height:50px"  align="middle" src="BirthdayPug.jpg"> </p>
+          <p> <img style="width:90%"  align="middle" src="BirthdayPug.jpg"> </p>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div>
         <div class="col-md-6">
           <h2>Project 2</h2>
-          <img style="width:500px;height:500px"  src="CelebrateHoneyBadger.gif">
+          <img style="width:90%"  src="CelebrateHoneyBadger.gif">
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div>
