--- a/index.html
+++ b/index.html
@@ -55,31 +55,48 @@
     <div class="container">
       <!-- Example row of columns -->
       <div class="row">
-        <div class="col-md-4">
-          <img style="width:90%"  align="middle" src="BirthdayPug.jpg"> 
-          <h2><a href="project.html">Project 1</a></h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
-        <a href="project.html"><div class="col-md-4" >
-          <img style="width:90%"  align="middle" src="BirthdayPug.jpg"> 
-          <h2>Project 2</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-       </div>
-       </a>
-        <div class="col-md-4">
-          <img style="width:90%"  align="middle" src="BirthdayPug.jpg"> 
-          <h2>Project 3</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
-        <div class="col-md-4">
-          <img style="width:90%"  align="middle" src="BirthdayPug.jpg"> 
-          <h2>Project 4</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
+        <a href="project.html">
+          <div class="col-md-4" >
+            <img style="width:90%"  align="middle" src="BirthdayPug.jpg"> 
+            <h2>Project 2</h2>
+            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          </div>
+        </a>
+        <a href="project.html">
+          <div class="col-md-4" >
+            <img style="width:90%"  align="middle" src="BirthdayPug.jpg"> 
+            <h2>Project 2</h2>
+            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          </div>
+        </a>
+         <a href="project.html">
+          <div class="col-md-4" >
+            <img style="width:90%"  align="middle" src="BirthdayPug.jpg"> 
+            <h2>Project 2</h2>
+            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          </div>
+        </a>
+        <a href="project.html">
+          <div class="col-md-4" >
+            <img style="width:90%"  align="middle" src="BirthdayPug.jpg"> 
+            <h2>Project 2</h2>
+            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          </div>
+        </a>
+        <a href="project.html">
+          <div class="col-md-4" >
+            <img style="width:90%"  align="middle" src="BirthdayPug.jpg"> 
+            <h2>Project 2</h2>
+            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          </div>
+        </a>
+        <a href="project.html">
+          <div class="col-md-4" >
+            <img style="width:90%"  align="middle" src="BirthdayPug.jpg"> 
+            <h2>Project 2</h2>
+            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          </div>
+        </a>
       </div>
 
       <hr>
