--- a/project.html
+++ b/project.html
@@ -46,18 +46,17 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>Casey Monahan</h1>
+        <a href="http://caseymonahan.github.io/Portfolio/"><h1>Casey Monahan</h1></a>
       </div>
     </div>
 
     <div class="container">
       <!-- Example row of columns -->
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-12">
           <h2>Project 1</h2>
           <img style="width:90%"  align="middle" src="BirthdayPug.jpg"> 
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div>
       </div>
 
