ipd page population and formatting

--- a/ipd.html
+++ b/ipd.html
@@ -46,7 +46,7 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <a href="http://caseymonahan.github.io/Portfolio/"><h3>Casey Monahan</h3></a>
+        <a href="http://caseymonahan.github.io/Portfolio/" alt="Home"><h3>Casey Monahan</h3></a>
         <h1>Fresh Gear</h1>
         <h2>Designing a clothing storage solution to keep your clothes smelling and feeling clean</h2>
       </div>
@@ -55,12 +55,11 @@
     <div class="container">
       <!-- Example row of columns -->
       <div class="row">
-        <div class="col-md-6">
-          <img style="width:90%"  align="middle" src="BirthdayPug.jpg"> 
+        <div class="col-md-8">
+          <img style="width:90%"  align="middle" src="images/ipd/problemsolution.png"> 
         </div>
         <div class="row">
-        <div class="col-md-6">
-          <h2>Project 1</h2>
+        <div class="col-md-4">
           <p>Problem:  Sam runs 5 days a week. Since he only does laundry every 2 weeks, he often wears running shorts multiple times. He doesn’t know where to put them after he wears them once, so they pile up on his floor and smell gross, especially after a few days.
           </p>
           <p>Solution:  Intermediate Clothing Cleaning - remove smell and dampness so clothing can be worn again FreshGear allows already worn but not dirty clothing to dry out and return to freshness for re-wear.</p>
@@ -83,6 +82,13 @@
           <h2>Project 2</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
         </div>
+        </div>
+        <hr></hr>
+        <div class="row">
+          <p>FreshGear: Integrated Product Design, Fall 2013</p>
+          <p>Teammates: Jordyn Burger (Olin), Mike Avagianos (MassArt), Bob Son, Seung Hwan Shin, and Trevor Sullivan (Babson)</p>
+          <p>IPD was a collaborative class between Olin, Babson, and Massachusetts College of Art and Design. The aim was to develop a product for “the sustainable home” and produce a looks-like model, a works-like prototype, and a complementary business model.</p>
+          <p>Thanks to instructors Ben Linder (Olin) and Sebastian Fixson (Babson), and teaching assistant Kathryn Brookshier (Olin)</p>
         </div>
       </div>
 
