--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
     <div class="container">
       <!-- Example row of columns -->
       <div class="row">
-        <a href="project.html">
+        <a href="ipd.html">
           <div class="col-md-4" >
-            <img style="width:90%"  align="middle" src="BirthdayPug.jpg"> 
-            <h2>Project 2</h2>
+            <img style="width:90%"  align="middle" src="images/ipd/problemsolution.png"> 
+            <h2>Clothing storage for freshness</h2>
             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           </div>
         </a>
