--- a/ipd.html
+++ b/ipd.html
@@ -47,8 +47,7 @@
     <div class="jumbotron">
       <div class="container">
         <a href="http://caseymonahan.github.io/Portfolio/" alt="Home"><h3>Casey Monahan</h3></a>
-        <h1>Fresh Gear</h1>
-        <h2>Designing a clothing storage solution to keep your clothes smelling and feeling clean</h2>
+        <h1>Fresh Gear</h1><h2>Designing a clothing storage solution to keep your clothes smelling and feeling clean</h2>
       </div>
     </div>
 
