IPD finished i think maybe

--- a/ipd.html
+++ b/ipd.html
@@ -34,9 +34,7 @@
 
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="http://caseymonahan.github.io/Portfolio/">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li class="active"><a href="http://caseymonahan.github.io/Portfolio/">Casey Monahan - Home</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -46,8 +44,7 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <a href="http://caseymonahan.github.io/Portfolio/" alt="Home"><h3>Casey Monahan</h3></a>
-        <h1>Fresh Gear</h1><h2>Designing a clothing storage solution to keep your clothes smelling and feeling clean</h2>
+        <h2>Fresh Gear</h2><h2>Designing a clothing storage solution to keep your clothes smelling and feeling clean</h2>
       </div>
     </div>
 
@@ -59,29 +56,28 @@
         </div>
         <div class="row">
         <div class="col-md-4">
-          <p>Problem:  Sam runs 5 days a week. Since he only does laundry every 2 weeks, he often wears running shorts multiple times. He doesn’t know where to put them after he wears them once, so they pile up on his floor and smell gross, especially after a few days.
+          <p><h4>Problem:</h4>  Sam runs 5 days a week. Since he only does laundry every 2 weeks, he often wears running shorts multiple times. He doesn’t know where to put them after he wears them once, so they pile up on his floor and smell gross, especially after a few days.
           </p>
-          <p>Solution:  Intermediate Clothing Cleaning - remove smell and dampness so clothing can be worn again FreshGear allows already worn but not dirty clothing to dry out and return to freshness for re-wear. This also creates a 'home' for clothing worn once, previously homeless because users didn't want to put clothes back in a dresser with clean clothes, or in the hamper where they would get even dirtier.</p>
+          <p><h4>Solution:</h4>  Intermediate Clothing Cleaning - remove smell and dampness so clothing can be worn again FreshGear allows already worn but not dirty clothing to dry out and return to freshness for re-wear. This also creates a 'home' for clothing worn once, previously homeless because users didn't want to put clothes back in a dresser with clean clothes, or in the hamper where they would get even dirtier.</p>
         </div>
         </div>
         <hr></hr>
         <div class="row">
-          <div class="col-md-2" >
-          <p>My team of two engineers, three business students and one industrial desiger worked together to create a clothing storage prototype that reduces "funk" in clothing that has already been worn once. This allows the user to re-wear clothing, reducing amount of clothing needed, as well as laundry. </p>
-                      <h3>User Interviews</h3>
+          <div class="col-md-3" >
+            <h3>User Interviews</h3>
              <h4>What makes clothes dirty?</h4>
-             <p>"funk"</p><p>"worn it twice"</p><p>"smell"</p><p>"<i>actual</i> dirt"</p>
-          </div>
-          <div class="col-md-2">
-            <img style="width:90%"  align="middle" src="images/ipd/finalprototype.jpg">   
-          </div>
-
-          <div class="col-md-8" >
-            <img style="width:90%"  align="middle" src="images/ipd/iterativedesign.png">
-            <div align="middle">Intermediate Design</div>
+             <p>"funk"</p><p>"I wore it twice"</p><p>"smell"</p><p>"<i>actual</i> dirt"</p>
+                       </div>
+          <div class="col-mid-9">            
             <h3>Iterative Design</h3>
+            <p>The ideas was proposed as a sort of suit bag that treated clothing to reduce smell</p>
             <p>One of our intermediate designs combined a dirty laundry hamper with a once-worn clothing container that included a UV light to kill smell-causing bacteria.</p>
-            <p>The final prototype eliminated UV light in order to keep the system energy passive and more user-friendly. Hangs over closet door to move clothes away from the floor, which is perceived as a place for dirty clothes.</p>
+            <p>The final prototype eliminated UV light in order to keep the system energy passive and more user-friendly. Hangs over closet door to move clothes away from the floor, which is perceived as a place for dirty clothes. We built both a looks-like prototype shown here, as well as a works-like protoype that used silica gel to absorb moisture and activated charcoal to reduce semell.</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12" >
+            <img style="width:90%"  align="middle" src="images/ipd/iterativedesign.png">
           </div>
         </div>
         <hr></hr>
@@ -89,6 +85,7 @@
           <p>FreshGear: Integrated Product Design, Fall 2013</p>
           <p>Teammates: Jordyn Burger (Olin), Mike Avagianos (MassArt), Bob Son, Seung Hwan Shin, and Trevor Sullivan (Babson)</p>
           <p>IPD was a collaborative class between Olin, Babson, and Massachusetts College of Art and Design. The aim was to develop a product for “the sustainable home” and produce a looks-like model, a works-like prototype, and a complementary business model.</p>
+          <p>Sketches here by Casey Monahan, renders by Mike Avagianos</p>
           <p>Thanks to instructors Ben Linder (Olin) and Sebastian Fixson (Babson), and teaching assistant Kathryn Brookshier (Olin)</p>
         </div>
       </div>
