Energy page progress

--- a/energy.html
+++ b/energy.html
@@ -61,29 +61,28 @@
         </div>
         <hr></hr>
         <div class="row">
-          <div class="col-md-4" >
+          <div class="col-md-3" >
             <h3>User Interviews</h3>
              <h4>What makes clothes dirty?</h4>
              <p>Generator designed and built by a team of technicians at St. Joseph’s. This generator is part of a hydroelectric system installed in a river.</p>
             </div>
-          <div class="col-mid-4">            
-            <h3>Iterative Design</h3>
-            <p>The ideas was proposed as a sort of suit bag that treated clothing to reduce smell</p>
-            <p>Wind turbine generator designed and built by myself, Irene Hwang, Erika Tsustumi and Sze Wei Tan. There are magnets and coils sandwiched between two sheets of MDF. </p>
-            <p>The final prototype eliminated UV light in order to keep the system energy passive and more user-friendly. Hangs over closet door to move clothes away from the floor, which is perceived as a place for dirty clothes. We built both a looks-like prototype shown here, as well as a works-like protoype that used silica gel to absorb moisture and activated charcoal to reduce semell.</p>
+          <div class="col-md-3">  
+           <img style="width:90%" align="middle" src="images/energy/windmillolin">          
+            <p>Wind turbine generator designed and built by myself, Irene Hwang, Erika Tsustumi and Sze Wei Tan. There are magnets and coils sandwiched between two sheets of MDF.</p>
           </div>
-          <div class="col-md-4" >
-            <h3>User Interviews</h3>
-            <h4>What makes clothes dirty?</h4>
+          <div class="col-md-3" >
+            <h3>International Co-design</h3>
             <p>Generator designed and built by a team of technicians at St. Joseph’s. This generator is part of a hydroelectric system installed in a river.</p>
+            <p>This project provided an especially interesting and challenging co-design experience partially because we were working with partners in Uganda over Skype or email, dealing with unreliable internet connections and differences in cultural norms surrounding communication, but also because we were designing systems to be built using Ugandan skills and resources.</p>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12" >
+          <div class="col-md-3" >
             <img style="width:90%"  align="middle" src="images/ipd/iterativedesign.png">
-            <p>This August I led a workshop to teach the technicians the theory behind axial-disk generators, as well as rules to follow when designing these generators.</p>
+            <p>This August I led a workshop to teach the technicians the theory behind axial-disk generators, as well as rules to follow when designing these generators. I </p>
           </div>
         </div>
+
+        
+
         <hr></hr>
         <div class="row">
           <p>Local Electricity Systems for Uganda: Our team in Affordable Design and Entrepreneurship began a concentrating solar power project, I continued developing generators in independent research</p>
