--- a/energy.html
+++ b/energy.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Casey Monahan | Clothing Storage Product Design</title>
+    <title>Casey Monahan | Local Electricity in Uganda</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -45,39 +45,32 @@
     <div class="jumbotron">
       <div class="container">
         <h2>Creating locally-produced electricity systems for Uganda</h2>
+        <h4>Electricity is a life-saving resource. Empower Design is educating and co-designing with Ugandan technicians to enable the local manufacturing of energy systems.</h4>
       </div>
     </div>
 
     <div class="container">
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-md-8">
-          <img style="width:90%"  align="middle" src="images/ipd/problemsolution.png"> 
-        </div>
+
         <div class="row">
-        <div class="col-md-4">
-          <p>Electricity is a life-saving resource. Empower Design is educating and co-designing with Ugandan technicians to enable the local manufacturing of energy systems.</p>
-        </div>
-        </div>
-        <hr></hr>
-        <div class="row">
-          <div class="col-md-3" >
-            <h3>User Interviews</h3>
-             <h4>What makes clothes dirty?</h4>
-             <p>Generator designed and built by a team of technicians at St. Joseph’s. This generator is part of a hydroelectric system installed in a river.</p>
-            </div>
-          <div class="col-md-3">  
-           <img style="width:90%" align="middle" src="images/energy/windmillolin">          
-            <p>Wind turbine generator designed and built by myself, Irene Hwang, Erika Tsustumi and Sze Wei Tan. There are magnets and coils sandwiched between two sheets of MDF.</p>
-          </div>
           <div class="col-md-3" >
             <h3>International Co-design</h3>
             <p>Generator designed and built by a team of technicians at St. Joseph’s. This generator is part of a hydroelectric system installed in a river.</p>
             <p>This project provided an especially interesting and challenging co-design experience partially because we were working with partners in Uganda over Skype or email, dealing with unreliable internet connections and differences in cultural norms surrounding communication, but also because we were designing systems to be built using Ugandan skills and resources.</p>
           </div>
           <div class="col-md-3" >
-            <img style="width:90%"  align="middle" src="images/ipd/iterativedesign.png">
-            <p>This August I led a workshop to teach the technicians the theory behind axial-disk generators, as well as rules to follow when designing these generators. I </p>
+            <img style="width:90%"  align="middle" src="images/energy/cvkgenerator.jpg"> 
+            <p>Generator built by Ugandan technicians installed in a hydropower system</p>
+            <img style="width:90%" align="middle" src="images/energy/windmillolin.jpg"> 
+            <p>Wind turbine and generator built by myself, Irene Hwang, Erika Tsutsumi, and Sze Wei Tan at Olin</p>
+          </div>
+          <div class="col-md-3">  
+            <p>Generator designed and built by a team of technicians at St. Joseph’s. This generator is part of a hydroelectric system installed in a river.</p>         
+            <p>Wind turbine generator designed and built by myself, Irene Hwang, Erika Tsustumi and Sze Wei Tan. There are magnets and coils sandwiched between two sheets of MDF.</p>
+          </div>
+
+          <div class="col-md-3" >
+            <img style="width:90%"  align="middle" src="images/energy/teaching.jpg">
+            <p>This August I led a workshop to teach the technicians the theory behind axial-disk generators, as well as rules to follow when designing these generators.</p>
           </div>
         </div>
 
