--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           </div>
         </a>
-        <a href="project.html">
+        <a href="energy.html">
           <div class="col-md-4" >
-            <img style="width:90%"  align="middle" src="images/energy/windmillolin"> 
+            <img style="width:90%"  align="middle" src="images/energy/windmillolin.jpg"> 
             <h2>Local electricity systems in Uganda</h2>
             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           </div>
