--- a/energy.html
+++ b/energy.html
@@ -53,29 +53,24 @@
 
         <div class="row">
           <div class="col-md-3" >
-            <h3>International Co-design</h3>
-            <p>Generator designed and built by a team of technicians at St. Joseph’s. This generator is part of a hydroelectric system installed in a river.</p>
-            <p>This project provided an especially interesting and challenging co-design experience partially because we were working with partners in Uganda over Skype or email, dealing with unreliable internet connections and differences in cultural norms surrounding communication, but also because we were designing systems to be built using Ugandan skills and resources.</p>
+            <p>I worked on this project as part of a class called Affortable Design and Entrepreneurship which enabled students to work on real-world product development for extreme affordability. My team worked in conjuntion with <a href="empowerdesign.org"> Empower Design</a>, a non-profit that partnered with Ugandan technicians at St. Joseph's Technical Institute in Fort Portal, Uganda. My team in Affordable Design and Entrepreneurship worked with our Ugandan partners to design a concentrated solar power system that could be built from materials sourced in Uganda.</p>
+            <p>Wind turbine generator designed and built by myself, Irene Hwang, Erika Tsustumi and Sze Wei Tan. There are magnets and coils sandwiched between two sheets of MDF.</p>
           </div>
           <div class="col-md-3" >
             <img style="width:90%"  align="middle" src="images/energy/cvkgenerator.jpg"> 
-            <p>Generator built by Ugandan technicians installed in a hydropower system</p>
+            <p>Generator designed and built by a team of technicians at St. Joseph’s. This generator is part of a hydroelectric system installed in a river.</p>
             <img style="width:90%" align="middle" src="images/energy/windmillolin.jpg"> 
-            <p>Wind turbine and generator built by myself, Irene Hwang, Erika Tsutsumi, and Sze Wei Tan at Olin</p>
+            <p>Wind turbine and generator built by myself, Irene Hwang, Erika Tsutsumi, and Sze Wei Tan at Olin College</p>
           </div>
           <div class="col-md-3">  
-            <p>Generator designed and built by a team of technicians at St. Joseph’s. This generator is part of a hydroelectric system installed in a river.</p>         
-            <p>Wind turbine generator designed and built by myself, Irene Hwang, Erika Tsustumi and Sze Wei Tan. There are magnets and coils sandwiched between two sheets of MDF.</p>
+            <h3>International Co-design</h3>
+            <p>This project provided an especially interesting and challenging co-design experience partially because we were working with partners in Uganda over Skype or email, dealing with unreliable internet connections and differences in cultural norms surrounding communication, but also because we were designing systems to be built using Ugandan skills and resources.</p>
           </div>
-
           <div class="col-md-3" >
             <img style="width:90%"  align="middle" src="images/energy/teaching.jpg">
             <p>This August I led a workshop to teach the technicians the theory behind axial-disk generators, as well as rules to follow when designing these generators.</p>
           </div>
         </div>
-
-        
-
         <hr></hr>
         <div class="row">
           <p>Local Electricity Systems for Uganda: Our team in Affordable Design and Entrepreneurship began a concentrating solar power project, I continued developing generators in independent research</p>
