--- a/energy.html
+++ b/energy.html
@@ -54,7 +54,7 @@
         <div class="row">
           <div class="col-md-3" >
             <p>I worked on this project as part of a class called Affortable Design and Entrepreneurship which enabled students to work on real-world product development for extreme affordability. My team worked in conjuntion with <a href="empowerdesign.org"> Empower Design</a>, a non-profit that partnered with Ugandan technicians at St. Joseph's Technical Institute in Fort Portal, Uganda. My team in Affordable Design and Entrepreneurship worked with our Ugandan partners to design a concentrated solar power system that could be built from materials sourced in Uganda.</p>
-            <p>Wind turbine generator designed and built by myself, Irene Hwang, Erika Tsustumi and Sze Wei Tan. There are magnets and coils sandwiched between two sheets of MDF.</p>
+            <p>I was in charge of designing a generator that could be made with basic machine shop capabilities and locally available materials. With the help of teammates Amos Meeks and Grace Morton, I constructed two prototype generators for testing.</p>
           </div>
           <div class="col-md-3" >
             <img style="width:90%"  align="middle" src="images/energy/cvkgenerator.jpg"> 
@@ -64,7 +64,7 @@
           </div>
           <div class="col-md-3">  
             <h3>International Co-design</h3>
-            <p>This project provided an especially interesting and challenging co-design experience partially because we were working with partners in Uganda over Skype or email, dealing with unreliable internet connections and differences in cultural norms surrounding communication, but also because we were designing systems to be built using Ugandan skills and resources.</p>
+            <p>This project provided an especially interesting and challenging co-design experience partially because we were working with partners in Uganda over Skype or email, dealing with unreliable internet connections and differences in cultural norms surrounding communication, but also because we were designing systems to be built using Ugandan skills and resources.</p> <p>We had to understand that customers needed increased reliability from electricity systems but we also needed to understand the manufacturing capabilities available in Uganda. Our main goal was to increase the reliability of electricity </p>
           </div>
           <div class="col-md-3" >
             <img style="width:90%"  align="middle" src="images/energy/teaching.jpg">
