--- a/index.html
+++ b/index.html
@@ -59,14 +59,12 @@
           <div class="col-md-4" >
             <img style="width:90%"  align="middle" src="images/ipd/problemsolution.png"> 
             <h2>Clothing storage for freshness</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           </div>
         </a>
         <a href="energy.html">
           <div class="col-md-4" >
             <img style="width:90%"  align="middle" src="images/energy/windmillolin.jpg"> 
             <h2>Local electricity systems in Uganda</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           </div>
         </a>
          <a href="project.html">
@@ -79,10 +77,10 @@
         <hr></hr>
         <div class="row">
         </a>
-        <a href="project.html">
+        <a href="art.html">
           <div class="col-md-4" >
-            <img style="width:90%"  align="middle" src="BirthdayPug.jpg"> 
-            <h2>Project 2</h2>
+            <img style="width:90%"  align="middle" src="images/art/a.jpg"> 
+            <h2>Printmaking</h2>
             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           </div>
         </a>
