--- a/art.html
+++ b/art.html
@@ -92,8 +92,10 @@
 
         <hr></hr>
         <div class="row">
-          <p>Printmaking work done at Wellesley college</p>
-          <p>Thanks to instructors Phyllis McGibbon and Kelsey Miller</p>
+          <div class="col-md-12">
+            <p>Printmaking work done at Wellesley college</p>
+            <p>Thanks to instructors Phyllis McGibbon and Kelsey Miller</p>
+          </div>
         </div>
       </div>
 
