--- a/hfid.html
+++ b/hfid.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Casey Monahan | Clothing Storage Product Design</title>
+    <title>Casey Monahan | Saving Money on Groceries</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -44,7 +44,7 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h2>Fresh Gear</h2><h2>Designing a clothing storage solution to keep your clothes smelling and feeling clean</h2>
+        <h2>Dealz for Mealz</h2><h2>Designing a mobile app to allow shoppers to use coupons effortlessly</h2>
       </div>
     </div>
 
@@ -63,17 +63,23 @@
         </div>
         <hr></hr>
         <div class="row">
-          <div class="col-md-3" >
-            <h3>User Interviews</h3>
-             <h4>What makes clothes dirty?</h4>
-             <p>"funk"</p><p>"I wore it twice"</p><p>"smell"</p><p>"<i>actual</i> dirt"</p>
-                       </div>
-          <div class="col-md-9">            
+          <div class="col-md-4" >
+            <h3>User Research</h3>
+             <p>"If my husbands cereal is on sale I'll buy a few boxes but I don't just buy anything thats on sale"</p><p>"It's a mom-of-the-house chore, gotta feed the family"</p><p>"I don't want to spend half an hour looking for a coupon that's gonna save 50 cents"</p>
+             <p>A busy mom has no time to search for and clip coupons, but appreciates a good deal. She will occasionally buy discounted items but only if she thinks the item is going to keep her family happy and healthy. She would love to save more on groceries but doesn’t want to spend more effort on this chore.</p>
+             </div>
+          <div class="col-md-4">            
             <h3>Iterative Design</h3>
             <p>The ideas was proposed as a sort of suit bag that treated clothing to reduce smell</p>
             <p>One of our intermediate designs combined a dirty laundry hamper with a once-worn clothing container that included a UV light to kill smell-causing bacteria.</p>
             <p>The final prototype eliminated UV light in order to keep the system energy passive and more user-friendly. Hangs over closet door to move clothes away from the floor, which is perceived as a place for dirty clothes. We built both a looks-like prototype shown here, as well as a works-like protoype that used silica gel to absorb moisture and activated charcoal to reduce semell.</p>
           </div>
+          <div class="col-md-4">            
+            <h3>Iterative Design</h3>
+            <p>The ideas was proposed as a sort of suit bag that treated clothing to reduce smell</p>
+            <p>One of our intermediate designs combined a dirty laundry hamper with a once-worn clothing container that included a UV light to kill smell-causing bacteria.</p>
+            <p>The final prototype eliminated UV light in order to keep the system energy passive and more user-friendly. Hangs over closet door to move clothes away from the floor, which is perceived as a place for dirty clothes. We built both a looks-like prototype shown here, as well as a works-like protoype that used silica gel to absorb moisture and activated charcoal to reduce semell.</p>
+          </div>          
         </div>
         <div class="row">
           <div class="col-md-12" >
@@ -82,11 +88,10 @@
         </div>
         <hr></hr>
         <div class="row">
-          <p>FreshGear: Integrated Product Design, Fall 2013</p>
-          <p>Teammates: Jordyn Burger (Olin), Mike Avagianos (MassArt), Bob Son, Seung Hwan Shin, and Trevor Sullivan (Babson)</p>
-          <p>IPD was a collaborative class between Olin, Babson, and Massachusetts College of Art and Design. The aim was to develop a product for “the sustainable home” and produce a looks-like model, a works-like prototype, and a complementary business model.</p>
-          <p>Sketches here by Casey Monahan, renders by Mike Avagianos</p>
-          <p>Thanks to instructors Ben Linder (Olin) and Sebastian Fixson (Babson), and teaching assistant Kathryn Brookshier (Olin)</p>
+          <p>Deals for Meals: Human Factors in Interface Design, Fall 2014</p>
+          <p>Teammates: Rachel Boy, Ankeet Mutha, Mateusz Okon</p>
+          <p>This was a team project for a class called Human Factors in Interface Design. The project involved user research, paper prototyping, and creating a works-like looks-like prototype.</p>
+          <p>Check out our<a href="http://hfid.olin.edu/sa2015/DeathByHypothermia/"> website here</a> and our<a href="http://hfid.olin.edu/sa2015/DeathByHypothermia/prototype/shopping_list.html"> mobile prototype here.</a></p>
         </div>
       </div>
 
