Finishing up Index

--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
     <div class="jumbotron">
       <div class="container">
         <h1>Casey Monahan</h1>
-        <p>Casey is an engineer, designer, and environmentalist living in New York. She graduated from Olin College in December 2014 where she majored in Sustainable Design Engineering, played rugby, and made art.</p>
       </div>
     </div>
 
@@ -67,11 +66,10 @@
             <h2>Local electricity systems in Uganda</h2>
           </div>
         </a>
-         <a href="project.html">
+         <a href="hfid.html">
           <div class="col-md-4" >
-            <img style="width:90%"  align="middle" src="BirthdayPug.jpg"> 
-            <h2>Project 2</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+            <img style="width:90%"  align="middle" src="images/hfid/smallwireframe.png"> 
+            <h2>Effortless money saving on groceries</h2>
           </div>
         </div>
         <hr></hr>
@@ -84,20 +82,9 @@
             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           </div>
         </a>
-        <a href="project.html">
-          <div class="col-md-4" >
-            <img style="width:90%"  align="middle" src="BirthdayPug.jpg"> 
-            <h2>Project 2</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <div class="col-md-8" >
+            <p>Casey is an engineer, designer, and environmentalist living in New York. She graduated from Olin College in December 2014 where she majored in Sustainable Design Engineering, with a humanities concentration in printmaking. She enjoys vegetarian cooking and playing rugby.</p>
           </div>
-        </a>
-        <a href="project.html">
-          <div class="col-md-4" >
-            <img style="width:90%"  align="middle" src="BirthdayPug.jpg"> 
-            <h2>Project 2</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          </div>
-        </a>
         </div>
       </div>
 
