--- a/index.html
+++ b/index.html
@@ -54,22 +54,28 @@
     <div class="container">
       <!-- Example row of columns -->
       <div class="row">
+        <div class="col-md-12">
+          <h2>Projects</h2>
+        </div>
+      </div>
+      
+      <div class="row">
         <a href="ipd.html">
           <div class="col-md-4" >
             <img style="width:90%"  align="middle" src="images/ipd/problemsolution.png"> 
-            <h2>Clothing storage for freshness</h2>
+            <h3>Clothing storage for freshness</h3>
           </div>
         </a>
         <a href="energy.html">
           <div class="col-md-4" >
             <img style="width:90%"  align="middle" src="images/energy/windmillolin.jpg"> 
-            <h2>Local electricity systems in Uganda</h2>
+            <h3>Local electricity systems in Uganda</h3>
           </div>
         </a>
          <a href="hfid.html">
           <div class="col-md-4" >
             <img style="width:90%"  align="middle" src="images/hfid/smallwireframe.png"> 
-            <h2>Effortless money saving on groceries</h2>
+            <h3>Effortless money saving on groceries</h3>
           </div>
         </div>
         <hr></hr>
@@ -77,12 +83,14 @@
         </a>
         <a href="art.html">
           <div class="col-md-4" >
+            <h2>Artwork</h2>
             <img style="width:90%"  align="middle" src="images/art/a.jpg"> 
-            <h2>Printmaking</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           </div>
         </a>
-          <div class="col-md-8" >
+        <div class "col-md-1">
+        </div>
+          <div class="col-md-7" >
+            <h2>About Casey</h2>
             <p>Casey is an engineer, designer, and environmentalist living in New York. She graduated from Olin College in December 2014 where she majored in Sustainable Design Engineering, with a humanities concentration in printmaking. She enjoys vegetarian cooking and playing rugby.</p>
           </div>
         </div>
